--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -7,6 +7,9 @@
     <string name="module_switch_name">开启模块</string>
     <string name="play_sound_button_name">播放声音</string>
     <string name="enable_log_button_name">打印日志</string>
-    <string name="inject_control_button_name">注入菜单</string>
-    <string name="force_nv21_portrait_button_name">强制NV21竖屏</string>
+    <string name="inject_control_button_name">注入控制台</string>
+    <string name="force_hook_all_work_mode_button_name">Hook所有工作模式</string>
+    <string name="work_mode_normal">拍照</string>
+    <string name="work_mode_scan_qr_code">扫描二维码</string>
+    <string name="work_mode_face_recognition">人脸识别</string>
 </resources>
